prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: prometheus-service
    namespace: tarun-spring-app
spec:
    type: ClusterIP
    selector:
      app: prometheus
    ports:
      - port: 90
        targetPort: 9090
